package behavioral.strategy;

public interface StrategyConverter {

    String convert(String  file);
}
